--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.17.2",
     "bower": "^1.8.0",
     "connect-ensure-login": "^0.1.1",
@@ -32,7 +33,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "mongodb": "^2.2.28",
-    "mongoose": "^4.10.6",
+    "mongoose": "^5.10.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
